# testdata-factory

./: .gitignore  README.md  pyproject.toml  test_api.py  test_zhiwei.txt
docs/: usage.md
src/testdata_factory/: __init__.py  api.py  cli.py  dedup.py  templates.py  validators.py
src/testdata_factory/database/: __init__.py  dependency.py  parser.py  schema.py  unique.py
src/testdata_factory/exporters/: __init__.py  csv_exporter.py  excel_exporter.py  json_exporter.py
src/testdata_factory/generators/: __init__.py  address.py  bank_card.py  color.py  company.py  credential.py  date.py  email.py  id_card.py  ip.py  money.py  name.py  phone.py  position.py  regex.py  text.py  url.py  uuid.py
src/testdata_factory/routers/: __init__.py  database.py  generator.py
web/: package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/ui/: button.tsx  card.tsx  collapsible.tsx  input.tsx  textarea.tsx  toast-provider.tsx  toast.tsx
